--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,28 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <!--羡慕主要使用到的地方其实是 jobschedulerdemo-->
+    <string name="onstoptask">onStopTask</string>
+    <string name="onstarttask">onStartTask</string>
+    <string name="defaultparamtext">任务参数会显示在这里。</string>
+    <string name="schedule_job_button_text">调度工作</string>
+    <string name="cancel_all_jobs_button_text">全部取消</string>
+    <string name="finish_job_button_text">完成上一个任务</string>
+    <string name="idle_mode_text">要求设备处于空闲状态。</string>
+    <string name="charging_caption">充电:</string>
+    <string name="charging_text">需要插入设备</string>
+    <string name="idle_caption">闲置:</string>
+    <string name="connectivity">连接:</string>
+    <string name="any">Any</string>
+    <string name="unmetered">WiFi</string>
+    <string name="timing">定时:</string>
+    <string name="delay">延迟:</string>
+    <string name="deadline">最后期限:</string>
+    <string name="work_duration">工作时间:</string>
+    <string name="cancelled_job">已取消工作 %d</string>
+    <string name="no_jobs_to_cancel">没有任务取消</string>
+    <string name="all_jobs_cancelled">全部工作已经取消</string>
+
 </resources>
